infra/kubernetes/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: privilee-app
  annotations:
    spec.ingressClassName: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /myapp
        pathType: Prefix
        backend:
          service:
            name: myapp-service  
            port:
              number: 80
